--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "ag-grid-community": "^30.2.1",
+    "ag-grid-react": "^30.2.1",
     "bootstrap": "^4.5.0",
+    "firebase": "^10.6.0",
     "next": "9.3.2",
     "next-images": "^1.4.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
+    "react-icons": "^4.12.0",
     "react-id-swiper": "^4.0.0",
     "react-modal-video": "^1.2.3",
     "react-scroll": "^1.8.0",
